[gd_scene load_steps=6 format=3 uid="uid://dl3ssuwl85cip"]

[ext_resource type="Script" path="res://scripts/pilot_profile.gd" id="1_02gt5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yux3x"]
bg_color = Color(0.6, 0.6, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1olyh"]
bg_color = Color(0.686275, 0.815686, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfrly"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xuhe4"]
bg_color = Color(0, 0.760784, 0.988235, 1)

[node name="PilotProfileMargin" type="MarginContainer"]
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_02gt5")

[node name="PilotProfile" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PilotID" type="Label" parent="PilotProfile"]
layout_mode = 2
text = "Pilot"

[node name="PowerIndicator" type="PanelContainer" parent="PilotProfile"]
layout_mode = 2

[node name="TotalPower" type="ProgressBar" parent="PilotProfile/PowerIndicator"]
custom_minimum_size = Vector2(96, 16)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_yux3x")
theme_override_styles/fill = SubResource("StyleBoxFlat_1olyh")
value = 100.0
show_percentage = false

[node name="ShieldPower" type="ProgressBar" parent="PilotProfile/PowerIndicator"]
custom_minimum_size = Vector2(96, 16)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_hfrly")
theme_override_styles/fill = SubResource("StyleBoxFlat_xuhe4")
value = 40.0
show_percentage = false
